# RWD

./: Makefile  QtExampleProFile.pro  README  RWD-draft.pro  install.sh  meson.build
doc/: how-to-implement-your-own-rwd-plugin.docx  xml-configuration-parameters.docx
include/RWDFramework/: Model.h  ModelConfiguration.h  ModelFactory.h.autosave  ModelFactory.hpp  ModelWrapper.h  config.h  integrable.h  integrate.hpp  odeint_eigen_integration.hpp
include/RWDFramework/observers/: StoreInMemoryObserver.h
include/boost/numeric/odeint/integrate/detail/: integrate_const.hpp
include/models/: osc-model.h
plugins/: meson.build
plugins/HarmonicOscillator/: OscPlugin.pro  harmonicOscillator.xml  meson.build
plugins/HarmonicOscillator/include/RWDFramework/: Model.h
plugins/HarmonicOscillator/include/models/: create_model.h  osc-model.h
plugins/HarmonicOscillator/src/models/: create_model.cpp  main.cpp
src/RWDFramework/: ModelConfiguration.cpp  main.cpp
subprojects/: .gitignore  odeint.wrap
